Bug 360730 - Tasklist and the Tooltip displays wrong timezone
Summary: Tasklist and the Tooltip displays wrong timezone
Status: RESOLVED FIXED
Alias: None
Product: kcalutils
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.13.80
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-19 10:54 UTC by projekt1
Modified: 2020-06-14 12:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description projekt1 2016-03-19 10:54:08 UTC
Tasklist and Tooltip displays completiontime in Zulu-Time not in local time.

This aplies to Version 4.14.9 but this is not possible to choose in the dropdown field above.

Operating System: Opensuse 13.2
Kernel Version: Linux (x86_64) release 3.16.7-35-desktop

Reproducible: Always

Steps to Reproduce:
1.Create a new task with Begin and End-Time
2. After begin Time set status "completed"
3.Check Time with tooltip or Tasklist in kalendar an you see that the time is in Zulutime not in local time (for me Vienna, so the completion time ist 1 hour before [eg. Task completed at 12:34 {local-time} is displayed as completed 11:34])

Actual Results:  
see above

Expected Results:  
correct tiemzone?
Comment 1 Allen Winter 2020-06-10 22:03:54 UTC
Git commit d0d2c30657becf33e7854a6ebcb5ba26acb33d7f by Allen Winter, on behalf of Glen Ditchfield.
Committed on 10/06/2020 at 22:03.
Pushed by winterz into branch 'master'.

Improve tool tips for to-dos

There are several problems with tool tips for recurring multi-day to-dos:
 * The due date is wrong.
 * The start date is just a date, without a time.
 * The to-do is displayed in the agenda view on the start date.
 * The agenda view passes the start date down to `dateRangeText()`, which
   expects the due date.
 * `dateRangeText()` calls `getNextDateTime()` expecting a due date, but
   `getNextDateTime()` returns start dates.

This patch adjusts `dateRangeText()` to accept any date between the to-do's
start and end dates, adjusts the tool tip contents, and incidentally fixes

M  +2    -1    autotests/CMakeLists.txt
A  +397  -0    autotests/testtodotooltip.cpp     [License: LGPL (v2+)]
A  +44   -0    autotests/testtodotooltip.h     [License: LGPL (v2+)]
M  +40   -26   src/incidenceformatter.cpp
M  +2    -2    src/incidenceformatter.h

https://invent.kde.org/pim/kcalutils/commit/d0d2c30657becf33e7854a6ebcb5ba26acb33d7f