Improve tool tips for to-dos

There are several problems with tool tips for recurring multi-day to-dos:
 * The due date is wrong.
 * The start date is just a date, without a time.
 * The to-do is displayed in the agenda view on the start date.
 * The agenda view passes the start date down to `dateRangeText()`, which
   expects the due date.
 * `dateRangeText()` calls `getNextDateTime()` expecting a due date, but
   `getNextDateTime()` returns start dates.

This patch adjusts `dateRangeText()` to accept any date between the to-do's
start and end dates, adjusts the tool tip contents, and incidentally fixes
BUG: 360730