src/incidenceformatter.h
@@ -77,8 +77,8 @@ namespace IncidenceFormatter {
   @param sourceName where the incidence is from (e.g. resource name)
   @param incidence is a pointer to the Incidence to be formatted.
   @param date is the QDate for which the toolTip should be computed; used
-  mainly for recurring incidences. Note: For to-dos, this is the due date of
-  the occurrence, not the start date.
+  mainly for recurring incidences. Note: For to-dos, this a date between the
+  start date and the due date (inclusive) of the occurrence.
   @param richText if yes, the QString will be created as RichText.
 */
 KCALUTILS_EXPORT QString toolTipStr(const QString &sourceName, const KCalendarCore::IncidenceBase::Ptr &incidence, QDate date = QDate(), bool richText = true);
